--- a/style.css
+++ b/style.css
@@ -14,10 +14,8 @@
     text-transform: uppercase;
     font-weight: bold;
 }
-.link :hover{
-    color: red;
-}
 
+    
 .lista {
     display: inline;
     margin-left: 50px;
@@ -30,10 +28,16 @@
 
 .ancora{
     text-decoration: none;
-    color: inherit; 
+    color: black; 
 
   
 }
+.ancora:hover{
+    color: red;
+    text-decoration:overline;
+    text-decoration:underline;
+}
+
 
 .caixa{
   display: flex;
